# Simpio

./: README.md
doc/: AUTHORS.txt  attribution.txt  design.md  pio_programming.md
inc/: constants.h  device_keypad.h  device_spi_flash.h  devices.h  editor.h  enumerator.h  execution.h  fifo.h  hardware.h  hardware_changed.h  instruction.h  parser.h  print.h  symbols.h  ui.h
src/: Makefile  device_keypad.c  device_spi_flash.c  devices.c  editor.c  execution.c  fifo.c  fifo_test.c  hardware.c  hardware_changed.c  instruction.c  main.c  print.c  simpio.l  simpio.y  symbols.c  ui.c
tests/: run_test.sh  run_tests.sh  simpio  simpio32  temp_pio_file  test_autopull.pio  test_autopull.simpio  test_autopush.pio  test_autopush.simpio  test_data.simpio  test_delays.pio  test_delays.simpio  test_in.pio  test_in.simpio  test_irq.simpio  test_jmp.pio  test_jmp.simpio  test_keypad.simpio  test_mov.pio  test_mov.simpio  test_out.pio  test_out.simpio  test_pull.pio  test_pull.simpio  test_push.pio  test_push.simpio  test_read.pio  test_read.simpio  test_set.pio  test_set.simpio  test_set_timeline.simpio  test_spi_flash.simpio  test_wait.pio  test_wait.simpio  test_wrap.simpio  test_write.pio  test_write.simpio  tests.c
tests_real/blink/: blink.simpio
tests_real/keypad/: keypad.simpio
tests_real/parallel/: parallel.simpio
tests_real/spi_flash_hw/spi_flash_builtin/: CMakeLists.txt  spi_flash.c
tests_real/spi_flash_hw/spi_flash_transaction/: CMakeLists.txt  spi_flash_transaction.c  spi_flash_transaction.pio
util/: gdb_host.sh  gdb_target.sh  generate.py
(+6 files in other folders)
